--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                             <a class="nav-link active">About</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
+                    <form class="d-flex m-1" role="search">
                         <input class="form-control search-outline-light  me-2 form-control-1" type="search"
                             placeholder="Search" aria-label="Search">
                     </form>
-                    <button class="btn btn-outline-light me-2" type="submit">Login</button>
-                    <button class="btn btn-warning" type="submit">Sign up</button>
+                    <button class="btn btn-outline-light m-1 me-2" type="submit">Login</button>
+                    <button class="btn btn-warning m-1" type="submit">Sign up</button>
                 </div>
             </div>
         </nav>
@@ -109,13 +109,8 @@
             </div>
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-        viewBox="0 0 16 16">
-        <path
-            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-    </svg>
 
-    <footer class="bg-dark  text-white fixed-bottom">
+    <footer class="bg-dark  text-white sticky-bottom">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
 
