--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <span class="heading">Welcome To The Wizarding World</span>
     </div>
 
-    <div class="row m-3 mt-0">
+    
+
+    <div class="row m-3 mt-0 mb-5">
         <div class="col-sm-12 col-lg-4 p-3">
             <div class="card px-0 " style="width: 100%;">
                 <img src="https://images.ctfassets.net/usf1vwtuqyxm/1uzo3DWrgwqEsWOWiYUoEA/2127408dc271e6e7f2ed009359ccbcaf/WW_Hero_Image.jpg?fm=jpg&q=70&w=2560"
@@ -109,8 +111,10 @@
             </div>
         </div>
     </div>
+    
+    <div class="div-1"></div>
 
-    <footer class="bg-dark  text-white sticky-bottom">
+    <footer class="bg-dark  text-white fixed-bottom">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
 
